# warden

./: CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
docs/: runbook.md
freebsd/: README.md
freebsd/rc.d/: claude_proxy
scripts/: agent-gemma  agent-minimax  agent-openrouter-sonnet  agent-personal  pi-spline
src/: agent.rs  cleanup.rs  config.rs  jail.rs  lib.rs  main.rs
