[package]
name = "warden"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "warden"
path = "src/main.rs"

[[bin]]
name = "warden-test-spawn"
path = "src/bin/test_spawn.rs"

[[bin]]
name = "warden-cleanup"
path = "src/bin/cleanup.rs"

[dependencies]
anyhow = "1.0.102"
etcd-client = "0.18.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
rmcp = { version = "1.4.0", features = ["server", "transport-io", "schemars"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["full"] }
